--- a/ui/src/app/routes/room/components/game-chat/game-chat.component.html
+++ b/ui/src/app/routes/room/components/game-chat/game-chat.component.html
@@ -29,5 +29,8 @@
     placeholder="I can't believe it!..."
     [formControl]="chatControl"
     (keydown.enter)="$event.preventDefault(); sendMessage()"></textarea>
-  <sudo-send-button (click)="sendMessage()"></sudo-send-button>
+  <sudo-send-button 
+    class="game-chat__send-button"
+    (click)="sendMessage()">
+  </sudo-send-button>
 </div>
