room invite and environment

--- a/ui/src/app/components/numpad/numpad.component.scss
+++ b/ui/src/app/components/numpad/numpad.component.scss
@@ -5,7 +5,7 @@
   margin: 1rem 4rem;
   justify-content: center;
 
-  --active: var(--black);
+  --active: var(--lightblack);
 }
 
 .sudo-numpad__option {
