--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-  --black: #02020299;
+  --black: #0e0e0e;
+  --white: #efefef;
+  --lightblack: #02020299;
   --green: #08784b99;
 }
 
