--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -8,7 +8,7 @@
 
 body {
   margin: 0;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   box-sizing: border-box;
