--- a/ui/src/app/routes/room/components/game-states/play-pad/play-pad.component.scss
+++ b/ui/src/app/routes/room/components/game-states/play-pad/play-pad.component.scss
@@ -4,7 +4,7 @@
   gap: 1rem;
   margin: 1rem;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .sudo-play-pad__input-unit {
