--- a/ui/src/app/routes/room/components/game-states/game-started/game-started.component.html
+++ b/ui/src/app/routes/room/components/game-states/game-started/game-started.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="gameState$ | async as gameState"
+<div *ngIf="gameState() as gameState"
   class="game-started">
   <sudo-play-pad *ngIf="gameState.isSitting"
     [forceDisabled]="!gameState.isPlayerTurn"
