--- a/ui/src/app/routes/room/room.component.html
+++ b/ui/src/app/routes/room/room.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="gameState$ | async as gameState" class="room">
+<section *ngIf="gameState() as gameState" class="room">
   <div *ngIf="showCopyMessage"
     class="room__invite"
     (click)="onShareRoom()">
