--- a/ui/src/app/routes/room/components/game-states/play-pad/play-pad.component.scss
+++ b/ui/src/app/routes/room/components/game-states/play-pad/play-pad.component.scss
@@ -44,13 +44,15 @@
 }
 
 .sudo-play-pad__lock {
+  transition: 0.25s;
   text-align: center;
   padding: 0.25rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 
   &.disabled {
-    opacity: 0.1;
+    opacity: 0;
+    transition: 0.25s;
   }
 }
 
