--- a/ui/src/app/routes/room/room.component.scss
+++ b/ui/src/app/routes/room/room.component.scss
@@ -28,15 +28,14 @@
 }
 
 .room__turn-signal {
-  height: 0;
   padding: 0.25rem;
   font-weight: 700;
-  background-color: transparent;
+  background-color: var(--black);
   color: var(--white);
   text-align: center;
+  transition: 0.25s;
   
   &.current-turn {
-    height: 1rem;
     background-color: var(--green);
     transition: 0.25s;
   }
