--- a/ui/src/app/components/numpad/numpad.component.scss
+++ b/ui/src/app/components/numpad/numpad.component.scss
@@ -1,20 +1,16 @@
 .sudo-numpad {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(5, minmax(1rem, 3rem));
   gap: 0.5rem;
-  margin: 1rem 4rem;
+  margin: 0.25rem;
   justify-content: center;
 
   --active: var(--lightblack);
 }
 
 .sudo-numpad__option {
-  /* 20vw - (gap - margin) / 2 */
-  width: calc(20vw - 2.25rem);
-  height: calc(20vw - 2.25rem);
-  max-width: 5rem;
-  max-height: 5rem;
-  font-size: 2rem;
+  aspect-ratio: 1 / 1;
+  font-size: 1rem;
   font-weight: 700;
   user-select: none;
   /* todo: create a look & feel */
