make dc user have a color and avatar

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -3,7 +3,7 @@
   --black: #0e0e0e;
   --white: #efefef;
   --lightblack: #02020299;
-  --lightgray: #707070;
+  --lightgray: #9b9b9b50;
   --green: #08784b99;
 }
 
