--- a/ui/src/app/routes/room/room.component.html
+++ b/ui/src/app/routes/room/room.component.html
@@ -10,10 +10,8 @@
 
   <ng-container [ngSwitch]="gameState.status">
     <!-- todo: combine awaiting and started in one -->
-    <game-awaiting *ngSwitchCase="GameStates.Awaiting"></game-awaiting>
-    <ng-container *ngSwitchCase="GameStates.Started">
-      <game-started>Started!</game-started>
-    </ng-container>
+    <game-awaiting *ngSwitchCase="GameStates.Awaiting" />
+    <game-started *ngSwitchCase="GameStates.Started" />
     <!-- <div *ngSwitchCase="GameStates.Ended">Ended!</div> -->
   </ng-container>
 
