pad can now be hidden

--- a/ui/src/app/routes/room/components/game-chat/game-chat.component.html
+++ b/ui/src/app/routes/room/components/game-chat/game-chat.component.html
@@ -46,6 +46,7 @@
     (keydown.enter)="$event.preventDefault(); sendMessage()"></textarea>
   <sudo-send-button 
     class="game-chat__send-button"
+    [disabled]="chatControl.invalid"
     (click)="sendMessage()">
   </sudo-send-button>
 </div>
