--- a/ui/src/app/routes/room/components/game-chat/game-chat.component.overrides.scss
+++ b/ui/src/app/routes/room/components/game-chat/game-chat.component.overrides.scss
@@ -57,7 +57,7 @@
     }
   }
 
-  .game-chat__input .sudo-send-button {
-    background-color: lightgreen;
+  .game-chat__input .sudo-send-button:not([disabled]) {
+    background-color: var(--green);
   }
 }
