--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -2,6 +2,7 @@
 :root {
   --lightblack: #02020299;
   --lightgray: #9b9b9b99;
+  --lightblue: #0093c099;
   --green: #08784b99;
 
   // solid colors are the same as above without the 99 at the end
